syntax = "proto3";




option java_multiple_files = true;
option java_package = "com.item.test.dubbo.demo";
option java_outer_classname = "DemoProto";
option objc_class_prefix = "HLW";

package Demo;

message DemoRequest {
  string name = 1;
}

message DemoReply {
  string message = 1;
}

message PersonTest {
  int32 id = 1; // int 类型
  string name = 2; // string 类型
  string email = 3;
  Sex sex = 4; // 枚举类型
  repeated PhoneNumber phone = 5; // 引用下面定义的 PhoneNumber 类型的 message
  map<string, string> tags = 6; // map 类型

  // 定义一个枚举
  enum Sex {
    DEFAULT = 0;
    MALE = 1;
    Female = 2;
  }

  // 定义一个 message
  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;

    enum PhoneType {
      MOBILE = 0;
      HOME = 1;
      WORK = 2;
    }

  }

}

service Greeter{
  rpc greet(DemoRequest) returns (DemoReply);
}